// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer should render the actions and the dropdown accordingly 1`] = `
<WithStyles(Actions)
  actions={
    Array [
      Object {
        "id": "view",
        "label": "View",
      },
      Object {
        "id": "delete",
        "label": "Delete",
      },
      Object {
        "disabled": true,
        "id": "update",
        "label": "Update",
      },
    ]
  }
  actionsCallback={[Function]}
  category="ghost"
  id=""
  maxVisibleActions={1}
>
  <Actions
    actions={
      Array [
        Object {
          "id": "view",
          "label": "View",
        },
        Object {
          "id": "delete",
          "label": "Delete",
        },
        Object {
          "disabled": true,
          "id": "update",
          "label": "Update",
        },
      ]
    }
    actionsCallback={[Function]}
    category="ghost"
    classes={
      Object {
        "actionContainer": "HvActions-actionContainer-7",
        "button": "HvActions-button-6",
        "dropDownMenu": "HvActions-dropDownMenu-8",
        "dropDownMenuIcon": "HvActions-dropDownMenuIcon-9",
      }
    }
    id=""
    maxVisibleActions={1}
  >
    <div
      className="HvActions-actionContainer-7"
    >
      <WithStyles(HvButton)
        category="ghost"
        className="HvActions-button-6"
        id="-0-action-view"
        key="-0-action-view"
        onClick={[Function]}
      >
        <HvButton
          category="ghost"
          className="HvActions-button-6"
          classes={
            Object {
              "ghost": "HvButton-ghost-16",
              "ghostDisabled": "HvButton-ghostDisabled-17",
              "ghostSecondary": "HvButton-ghostSecondary-18",
              "ghostSecondaryDisabled": "HvButton-ghostSecondaryDisabled-19",
              "primary": "HvButton-primary-12",
              "primaryDisabled": "HvButton-primaryDisabled-13",
              "root": "HvButton-root-10",
              "rootIcon": "HvButton-rootIcon-11",
              "secondary": "HvButton-secondary-14",
              "secondaryDisabled": "HvButton-secondaryDisabled-15",
              "semantic": "HvButton-semantic-20",
              "semanticDisabled": "HvButton-semanticDisabled-21",
              "startIcon": "HvButton-startIcon-22",
            }
          }
          id="-0-action-view"
          onClick={[Function]}
        >
          <WithStyles(ForwardRef(Button))
            className="HvActions-button-6"
            classes={
              Object {
                "containedPrimary": "HvButton-primary-12",
                "disabled": "HvButton-ghostDisabled-17",
                "outlinedPrimary": "HvButton-secondary-14",
                "root": "HvButton-root-10",
                "startIcon": "HvButton-startIcon-22",
                "textPrimary": "HvButton-ghost-16",
              }
            }
            color="primary"
            disableRipple={true}
            id="-0-action-view"
            onClick={[Function]}
            variant="text"
          >
            <ForwardRef(Button)
              className="HvActions-button-6"
              classes={
                Object {
                  "colorInherit": "MuiButton-colorInherit",
                  "contained": "MuiButton-contained",
                  "containedPrimary": "MuiButton-containedPrimary HvButton-primary-12",
                  "containedSecondary": "MuiButton-containedSecondary",
                  "containedSizeLarge": "MuiButton-containedSizeLarge",
                  "containedSizeSmall": "MuiButton-containedSizeSmall",
                  "disableElevation": "MuiButton-disableElevation",
                  "disabled": "Mui-disabled HvButton-ghostDisabled-17",
                  "endIcon": "MuiButton-endIcon",
                  "focusVisible": "Mui-focusVisible",
                  "fullWidth": "MuiButton-fullWidth",
                  "iconSizeLarge": "MuiButton-iconSizeLarge",
                  "iconSizeMedium": "MuiButton-iconSizeMedium",
                  "iconSizeSmall": "MuiButton-iconSizeSmall",
                  "label": "MuiButton-label",
                  "outlined": "MuiButton-outlined",
                  "outlinedPrimary": "MuiButton-outlinedPrimary HvButton-secondary-14",
                  "outlinedSecondary": "MuiButton-outlinedSecondary",
                  "outlinedSizeLarge": "MuiButton-outlinedSizeLarge",
                  "outlinedSizeSmall": "MuiButton-outlinedSizeSmall",
                  "root": "MuiButton-root HvButton-root-10",
                  "sizeLarge": "MuiButton-sizeLarge",
                  "sizeSmall": "MuiButton-sizeSmall",
                  "startIcon": "MuiButton-startIcon HvButton-startIcon-22",
                  "text": "MuiButton-text",
                  "textPrimary": "MuiButton-textPrimary HvButton-ghost-16",
                  "textSecondary": "MuiButton-textSecondary",
                  "textSizeLarge": "MuiButton-textSizeLarge",
                  "textSizeSmall": "MuiButton-textSizeSmall",
                }
              }
              color="primary"
              disableRipple={true}
              id="-0-action-view"
              onClick={[Function]}
              variant="text"
            >
              <WithStyles(ForwardRef(ButtonBase))
                className="MuiButton-root HvButton-root-10 MuiButton-text HvActions-button-6 MuiButton-textPrimary HvButton-ghost-16"
                component="button"
                disableRipple={true}
                disabled={false}
                focusRipple={true}
                focusVisibleClassName="Mui-focusVisible"
                id="-0-action-view"
                onClick={[Function]}
                type="button"
              >
                <ForwardRef(ButtonBase)
                  className="MuiButton-root HvButton-root-10 MuiButton-text HvActions-button-6 MuiButton-textPrimary HvButton-ghost-16"
                  classes={
                    Object {
                      "disabled": "Mui-disabled",
                      "focusVisible": "Mui-focusVisible",
                      "root": "MuiButtonBase-root",
                    }
                  }
                  component="button"
                  disableRipple={true}
                  disabled={false}
                  focusRipple={true}
                  focusVisibleClassName="Mui-focusVisible"
                  id="-0-action-view"
                  onClick={[Function]}
                  type="button"
                >
                  <button
                    className="MuiButtonBase-root MuiButton-root HvButton-root-10 MuiButton-text HvActions-button-6 MuiButton-textPrimary HvButton-ghost-16"
                    disabled={false}
                    id="-0-action-view"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    <span
                      className="MuiButton-label"
                    >
                      View
                    </span>
                    <NoSsr />
                  </button>
                </ForwardRef(ButtonBase)>
              </WithStyles(ForwardRef(ButtonBase))>
            </ForwardRef(Button)>
          </WithStyles(ForwardRef(Button))>
        </HvButton>
      </WithStyles(HvButton)>
      <WithStyles(DropDownMenu)
        aria-label="-more-actions"
        classes={
          Object {
            "root": "HvActions-dropDownMenu-8",
          }
        }
        dataList={
          Array [
            Object {
              "icon": undefined,
              "iconCallback": undefined,
              "id": "delete",
              "label": "Delete",
            },
            Object {
              "disabled": true,
              "icon": undefined,
              "iconCallback": undefined,
              "id": "update",
              "label": "Update",
            },
          ]
        }
        disablePortal={false}
        disabled={false}
        expanded={false}
        icon={
          <ForwardRef(WithStyles)
            className="HvActions-dropDownMenuIcon-9"
          />
        }
        keepOpened={false}
        onClick={[Function]}
        onToggleOpen={null}
        placement="left"
      >
        <DropDownMenu
          aria-label="-more-actions"
          classes={
            Object {
              "icon": "HvDropDownMenu-icon-56",
              "iconSelected": "HvDropDownMenu-iconSelected-57",
              "menuList": "HvDropDownMenu-menuList-58",
              "root": "HvDropDownMenu-root-55 HvActions-dropDownMenu-8",
            }
          }
          dataList={
            Array [
              Object {
                "icon": undefined,
                "iconCallback": undefined,
                "id": "delete",
                "label": "Delete",
              },
              Object {
                "disabled": true,
                "icon": undefined,
                "iconCallback": undefined,
                "id": "update",
                "label": "Update",
              },
            ]
          }
          disablePortal={false}
          disabled={false}
          expanded={false}
          icon={
            <ForwardRef(WithStyles)
              className="HvActions-dropDownMenuIcon-9"
            />
          }
          keepOpened={false}
          onClick={[Function]}
          onToggleOpen={null}
          placement="left"
        >
          <div
            className="HvDropDownMenu-root-55 HvActions-dropDownMenu-8"
            id="hv-dropdown-menu1"
          >
            <WithStyles(ForwardRef(IconButton))
              aria-haspopup="true"
              aria-label="-more-actions"
              buttonRef={
                Object {
                  "current": <button
                    aria-haspopup="true"
                    aria-label="-more-actions"
                    class="MuiButtonBase-root MuiIconButton-root HvDropDownMenu-icon-56"
                    id="hv-dropdown-menu1-icon-button"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <div
                        class="HvActions-dropDownMenuIcon-9 HvIconMoreOptionsVertical-root-68 HvIconMoreOptionsVertical-rootS-70"
                      >
                        <svg
                          focusable="false"
                          height="16px"
                          viewBox="0 0 16 16"
                          width="16px"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            class="color0"
                            d="M7 7h2v2H7zm0-5h2v2H7zm0 10h2v2H7z"
                            fill="#414141"
                          />
                        </svg>
                      </div>
                    </span>
                  </button>,
                }
              }
              className="HvDropDownMenu-icon-56"
              disabled={false}
              id="hv-dropdown-menu1-icon-button"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <ForwardRef(IconButton)
                aria-haspopup="true"
                aria-label="-more-actions"
                buttonRef={
                  Object {
                    "current": <button
                      aria-haspopup="true"
                      aria-label="-more-actions"
                      class="MuiButtonBase-root MuiIconButton-root HvDropDownMenu-icon-56"
                      id="hv-dropdown-menu1-icon-button"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <div
                          class="HvActions-dropDownMenuIcon-9 HvIconMoreOptionsVertical-root-68 HvIconMoreOptionsVertical-rootS-70"
                        >
                          <svg
                            focusable="false"
                            height="16px"
                            viewBox="0 0 16 16"
                            width="16px"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              class="color0"
                              d="M7 7h2v2H7zm0-5h2v2H7zm0 10h2v2H7z"
                              fill="#414141"
                            />
                          </svg>
                        </div>
                      </span>
                    </button>,
                  }
                }
                className="HvDropDownMenu-icon-56"
                classes={
                  Object {
                    "colorInherit": "MuiIconButton-colorInherit",
                    "colorPrimary": "MuiIconButton-colorPrimary",
                    "colorSecondary": "MuiIconButton-colorSecondary",
                    "disabled": "Mui-disabled",
                    "edgeEnd": "MuiIconButton-edgeEnd",
                    "edgeStart": "MuiIconButton-edgeStart",
                    "label": "MuiIconButton-label",
                    "root": "MuiIconButton-root",
                    "sizeSmall": "MuiIconButton-sizeSmall",
                  }
                }
                disabled={false}
                id="hv-dropdown-menu1-icon-button"
                onClick={[Function]}
                onKeyDown={[Function]}
              >
                <WithStyles(ForwardRef(ButtonBase))
                  aria-haspopup="true"
                  aria-label="-more-actions"
                  buttonRef={
                    Object {
                      "current": <button
                        aria-haspopup="true"
                        aria-label="-more-actions"
                        class="MuiButtonBase-root MuiIconButton-root HvDropDownMenu-icon-56"
                        id="hv-dropdown-menu1-icon-button"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <div
                            class="HvActions-dropDownMenuIcon-9 HvIconMoreOptionsVertical-root-68 HvIconMoreOptionsVertical-rootS-70"
                          >
                            <svg
                              focusable="false"
                              height="16px"
                              viewBox="0 0 16 16"
                              width="16px"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                class="color0"
                                d="M7 7h2v2H7zm0-5h2v2H7zm0 10h2v2H7z"
                                fill="#414141"
                              />
                            </svg>
                          </div>
                        </span>
                      </button>,
                    }
                  }
                  centerRipple={true}
                  className="MuiIconButton-root HvDropDownMenu-icon-56"
                  disabled={false}
                  focusRipple={true}
                  id="hv-dropdown-menu1-icon-button"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <ForwardRef(ButtonBase)
                    aria-haspopup="true"
                    aria-label="-more-actions"
                    buttonRef={
                      Object {
                        "current": <button
                          aria-haspopup="true"
                          aria-label="-more-actions"
                          class="MuiButtonBase-root MuiIconButton-root HvDropDownMenu-icon-56"
                          id="hv-dropdown-menu1-icon-button"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <div
                              class="HvActions-dropDownMenuIcon-9 HvIconMoreOptionsVertical-root-68 HvIconMoreOptionsVertical-rootS-70"
                            >
                              <svg
                                focusable="false"
                                height="16px"
                                viewBox="0 0 16 16"
                                width="16px"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  class="color0"
                                  d="M7 7h2v2H7zm0-5h2v2H7zm0 10h2v2H7z"
                                  fill="#414141"
                                />
                              </svg>
                            </div>
                          </span>
                        </button>,
                      }
                    }
                    centerRipple={true}
                    className="MuiIconButton-root HvDropDownMenu-icon-56"
                    classes={
                      Object {
                        "disabled": "Mui-disabled",
                        "focusVisible": "Mui-focusVisible",
                        "root": "MuiButtonBase-root",
                      }
                    }
                    disableRipple={true}
                    disabled={false}
                    focusRipple={true}
                    id="hv-dropdown-menu1-icon-button"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                  >
                    <button
                      aria-haspopup="true"
                      aria-label="-more-actions"
                      className="MuiButtonBase-root MuiIconButton-root HvDropDownMenu-icon-56"
                      disabled={false}
                      id="hv-dropdown-menu1-icon-button"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onDragLeave={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      tabIndex={0}
                      type="button"
                    >
                      <span
                        className="MuiIconButton-label"
                      >
                        <WithStyles(MoreOptionsVertical)
                          className="HvActions-dropDownMenuIcon-9"
                        >
                          <MoreOptionsVertical
                            className="HvActions-dropDownMenuIcon-9"
                            classes={
                              Object {
                                "root": "HvIconMoreOptionsVertical-root-68",
                                "rootL": "HvIconMoreOptionsVertical-rootL-72",
                                "rootM": "HvIconMoreOptionsVertical-rootM-71",
                                "rootS": "HvIconMoreOptionsVertical-rootS-70",
                                "rootXs": "HvIconMoreOptionsVertical-rootXs-69",
                              }
                            }
                          >
                            <div
                              className="HvActions-dropDownMenuIcon-9 HvIconMoreOptionsVertical-root-68 HvIconMoreOptionsVertical-rootS-70"
                            >
                              <svg
                                focusable={false}
                                height="16px"
                                viewBox="0 0 16 16"
                                width="16px"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  className="color0"
                                  d="M7 7h2v2H7zm0-5h2v2H7zm0 10h2v2H7z"
                                  fill="#414141"
                                />
                              </svg>
                            </div>
                          </MoreOptionsVertical>
                        </WithStyles(MoreOptionsVertical)>
                      </span>
                      <NoSsr />
                    </button>
                  </ForwardRef(ButtonBase)>
                </WithStyles(ForwardRef(ButtonBase))>
              </ForwardRef(IconButton)>
            </WithStyles(ForwardRef(IconButton))>
            <ForwardRef(Popper)
              anchorEl={null}
              disablePortal={false}
              open={false}
              placement="bottom-end"
              popperOptions={Object {}}
              style={
                Object {
                  "zIndex": 1500,
                }
              }
            />
          </div>
        </DropDownMenu>
      </WithStyles(DropDownMenu)>
    </div>
  </Actions>
</WithStyles(Actions)>
`;

exports[`Footer should render the actions and the dropdown accordingly 2`] = `
<WithStyles(Actions)
  actions={
    Array [
      Object {
        "id": "view",
        "label": "View",
      },
      Object {
        "id": "delete",
        "label": "Delete",
      },
      Object {
        "disabled": true,
        "id": "update",
        "label": "Update",
      },
    ]
  }
  actionsCallback={[Function]}
  category="ghost"
  id=""
  maxVisibleActions={0}
>
  <Actions
    actions={
      Array [
        Object {
          "id": "view",
          "label": "View",
        },
        Object {
          "id": "delete",
          "label": "Delete",
        },
        Object {
          "disabled": true,
          "id": "update",
          "label": "Update",
        },
      ]
    }
    actionsCallback={[Function]}
    category="ghost"
    classes={
      Object {
        "actionContainer": "HvActions-actionContainer-79",
        "button": "HvActions-button-78",
        "dropDownMenu": "HvActions-dropDownMenu-80",
        "dropDownMenuIcon": "HvActions-dropDownMenuIcon-81",
      }
    }
    id=""
    maxVisibleActions={0}
  >
    <div
      className="HvActions-actionContainer-79"
    >
      <WithStyles(DropDownMenu)
        aria-label="-more-actions"
        classes={
          Object {
            "root": "HvActions-dropDownMenu-80",
          }
        }
        dataList={
          Array [
            Object {
              "icon": undefined,
              "iconCallback": undefined,
              "id": "view",
              "label": "View",
            },
            Object {
              "icon": undefined,
              "iconCallback": undefined,
              "id": "delete",
              "label": "Delete",
            },
            Object {
              "disabled": true,
              "icon": undefined,
              "iconCallback": undefined,
              "id": "update",
              "label": "Update",
            },
          ]
        }
        disablePortal={false}
        disabled={false}
        expanded={false}
        icon={
          <ForwardRef(WithStyles)
            className="HvActions-dropDownMenuIcon-81"
          />
        }
        keepOpened={false}
        onClick={[Function]}
        onToggleOpen={null}
        placement="left"
      >
        <DropDownMenu
          aria-label="-more-actions"
          classes={
            Object {
              "icon": "HvDropDownMenu-icon-83",
              "iconSelected": "HvDropDownMenu-iconSelected-84",
              "menuList": "HvDropDownMenu-menuList-85",
              "root": "HvDropDownMenu-root-82 HvActions-dropDownMenu-80",
            }
          }
          dataList={
            Array [
              Object {
                "icon": undefined,
                "iconCallback": undefined,
                "id": "view",
                "label": "View",
              },
              Object {
                "icon": undefined,
                "iconCallback": undefined,
                "id": "delete",
                "label": "Delete",
              },
              Object {
                "disabled": true,
                "icon": undefined,
                "iconCallback": undefined,
                "id": "update",
                "label": "Update",
              },
            ]
          }
          disablePortal={false}
          disabled={false}
          expanded={false}
          icon={
            <ForwardRef(WithStyles)
              className="HvActions-dropDownMenuIcon-81"
            />
          }
          keepOpened={false}
          onClick={[Function]}
          onToggleOpen={null}
          placement="left"
        >
          <div
            className="HvDropDownMenu-root-82 HvActions-dropDownMenu-80"
            id="hv-dropdown-menu2"
          >
            <WithStyles(ForwardRef(IconButton))
              aria-haspopup="true"
              aria-label="-more-actions"
              buttonRef={
                Object {
                  "current": <button
                    aria-haspopup="true"
                    aria-label="-more-actions"
                    class="MuiButtonBase-root MuiIconButton-root HvDropDownMenu-icon-83"
                    id="hv-dropdown-menu2-icon-button"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <div
                        class="HvActions-dropDownMenuIcon-81 HvIconMoreOptionsVertical-root-98 HvIconMoreOptionsVertical-rootS-100"
                      >
                        <svg
                          focusable="false"
                          height="16px"
                          viewBox="0 0 16 16"
                          width="16px"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            class="color0"
                            d="M7 7h2v2H7zm0-5h2v2H7zm0 10h2v2H7z"
                            fill="#414141"
                          />
                        </svg>
                      </div>
                    </span>
                  </button>,
                }
              }
              className="HvDropDownMenu-icon-83"
              disabled={false}
              id="hv-dropdown-menu2-icon-button"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <ForwardRef(IconButton)
                aria-haspopup="true"
                aria-label="-more-actions"
                buttonRef={
                  Object {
                    "current": <button
                      aria-haspopup="true"
                      aria-label="-more-actions"
                      class="MuiButtonBase-root MuiIconButton-root HvDropDownMenu-icon-83"
                      id="hv-dropdown-menu2-icon-button"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <div
                          class="HvActions-dropDownMenuIcon-81 HvIconMoreOptionsVertical-root-98 HvIconMoreOptionsVertical-rootS-100"
                        >
                          <svg
                            focusable="false"
                            height="16px"
                            viewBox="0 0 16 16"
                            width="16px"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              class="color0"
                              d="M7 7h2v2H7zm0-5h2v2H7zm0 10h2v2H7z"
                              fill="#414141"
                            />
                          </svg>
                        </div>
                      </span>
                    </button>,
                  }
                }
                className="HvDropDownMenu-icon-83"
                classes={
                  Object {
                    "colorInherit": "MuiIconButton-colorInherit",
                    "colorPrimary": "MuiIconButton-colorPrimary",
                    "colorSecondary": "MuiIconButton-colorSecondary",
                    "disabled": "Mui-disabled",
                    "edgeEnd": "MuiIconButton-edgeEnd",
                    "edgeStart": "MuiIconButton-edgeStart",
                    "label": "MuiIconButton-label",
                    "root": "MuiIconButton-root",
                    "sizeSmall": "MuiIconButton-sizeSmall",
                  }
                }
                disabled={false}
                id="hv-dropdown-menu2-icon-button"
                onClick={[Function]}
                onKeyDown={[Function]}
              >
                <WithStyles(ForwardRef(ButtonBase))
                  aria-haspopup="true"
                  aria-label="-more-actions"
                  buttonRef={
                    Object {
                      "current": <button
                        aria-haspopup="true"
                        aria-label="-more-actions"
                        class="MuiButtonBase-root MuiIconButton-root HvDropDownMenu-icon-83"
                        id="hv-dropdown-menu2-icon-button"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <div
                            class="HvActions-dropDownMenuIcon-81 HvIconMoreOptionsVertical-root-98 HvIconMoreOptionsVertical-rootS-100"
                          >
                            <svg
                              focusable="false"
                              height="16px"
                              viewBox="0 0 16 16"
                              width="16px"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                class="color0"
                                d="M7 7h2v2H7zm0-5h2v2H7zm0 10h2v2H7z"
                                fill="#414141"
                              />
                            </svg>
                          </div>
                        </span>
                      </button>,
                    }
                  }
                  centerRipple={true}
                  className="MuiIconButton-root HvDropDownMenu-icon-83"
                  disabled={false}
                  focusRipple={true}
                  id="hv-dropdown-menu2-icon-button"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <ForwardRef(ButtonBase)
                    aria-haspopup="true"
                    aria-label="-more-actions"
                    buttonRef={
                      Object {
                        "current": <button
                          aria-haspopup="true"
                          aria-label="-more-actions"
                          class="MuiButtonBase-root MuiIconButton-root HvDropDownMenu-icon-83"
                          id="hv-dropdown-menu2-icon-button"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <div
                              class="HvActions-dropDownMenuIcon-81 HvIconMoreOptionsVertical-root-98 HvIconMoreOptionsVertical-rootS-100"
                            >
                              <svg
                                focusable="false"
                                height="16px"
                                viewBox="0 0 16 16"
                                width="16px"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  class="color0"
                                  d="M7 7h2v2H7zm0-5h2v2H7zm0 10h2v2H7z"
                                  fill="#414141"
                                />
                              </svg>
                            </div>
                          </span>
                        </button>,
                      }
                    }
                    centerRipple={true}
                    className="MuiIconButton-root HvDropDownMenu-icon-83"
                    classes={
                      Object {
                        "disabled": "Mui-disabled",
                        "focusVisible": "Mui-focusVisible",
                        "root": "MuiButtonBase-root",
                      }
                    }
                    disableRipple={true}
                    disabled={false}
                    focusRipple={true}
                    id="hv-dropdown-menu2-icon-button"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                  >
                    <button
                      aria-haspopup="true"
                      aria-label="-more-actions"
                      className="MuiButtonBase-root MuiIconButton-root HvDropDownMenu-icon-83"
                      disabled={false}
                      id="hv-dropdown-menu2-icon-button"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onDragLeave={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      tabIndex={0}
                      type="button"
                    >
                      <span
                        className="MuiIconButton-label"
                      >
                        <WithStyles(MoreOptionsVertical)
                          className="HvActions-dropDownMenuIcon-81"
                        >
                          <MoreOptionsVertical
                            className="HvActions-dropDownMenuIcon-81"
                            classes={
                              Object {
                                "root": "HvIconMoreOptionsVertical-root-98",
                                "rootL": "HvIconMoreOptionsVertical-rootL-102",
                                "rootM": "HvIconMoreOptionsVertical-rootM-101",
                                "rootS": "HvIconMoreOptionsVertical-rootS-100",
                                "rootXs": "HvIconMoreOptionsVertical-rootXs-99",
                              }
                            }
                          >
                            <div
                              className="HvActions-dropDownMenuIcon-81 HvIconMoreOptionsVertical-root-98 HvIconMoreOptionsVertical-rootS-100"
                            >
                              <svg
                                focusable={false}
                                height="16px"
                                viewBox="0 0 16 16"
                                width="16px"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  className="color0"
                                  d="M7 7h2v2H7zm0-5h2v2H7zm0 10h2v2H7z"
                                  fill="#414141"
                                />
                              </svg>
                            </div>
                          </MoreOptionsVertical>
                        </WithStyles(MoreOptionsVertical)>
                      </span>
                      <NoSsr />
                    </button>
                  </ForwardRef(ButtonBase)>
                </WithStyles(ForwardRef(ButtonBase))>
              </ForwardRef(IconButton)>
            </WithStyles(ForwardRef(IconButton))>
            <ForwardRef(Popper)
              anchorEl={null}
              disablePortal={false}
              open={false}
              placement="bottom-end"
              popperOptions={Object {}}
              style={
                Object {
                  "zIndex": 1500,
                }
              }
            />
          </div>
        </DropDownMenu>
      </WithStyles(DropDownMenu)>
    </div>
  </Actions>
</WithStyles(Actions)>
`;

exports[`Footer should render the actions and the dropdown accordingly 3`] = `
<WithStyles(Actions)
  actions={
    Array [
      Object {
        "id": "view",
        "label": "View",
      },
      Object {
        "id": "delete",
        "label": "Delete",
      },
      Object {
        "disabled": true,
        "id": "update",
        "label": "Update",
      },
    ]
  }
  actionsCallback={[Function]}
  category="ghost"
  id=""
  maxVisibleActions={2}
>
  <Actions
    actions={
      Array [
        Object {
          "id": "view",
          "label": "View",
        },
        Object {
          "id": "delete",
          "label": "Delete",
        },
        Object {
          "disabled": true,
          "id": "update",
          "label": "Update",
        },
      ]
    }
    actionsCallback={[Function]}
    category="ghost"
    classes={
      Object {
        "actionContainer": "HvActions-actionContainer-109",
        "button": "HvActions-button-108",
        "dropDownMenu": "HvActions-dropDownMenu-110",
        "dropDownMenuIcon": "HvActions-dropDownMenuIcon-111",
      }
    }
    id=""
    maxVisibleActions={2}
  >
    <div
      className="HvActions-actionContainer-109"
    >
      <WithStyles(HvButton)
        category="ghost"
        className="HvActions-button-108"
        id="-0-action-view"
        key="-0-action-view"
        onClick={[Function]}
      >
        <HvButton
          category="ghost"
          className="HvActions-button-108"
          classes={
            Object {
              "ghost": "HvButton-ghost-118",
              "ghostDisabled": "HvButton-ghostDisabled-119",
              "ghostSecondary": "HvButton-ghostSecondary-120",
              "ghostSecondaryDisabled": "HvButton-ghostSecondaryDisabled-121",
              "primary": "HvButton-primary-114",
              "primaryDisabled": "HvButton-primaryDisabled-115",
              "root": "HvButton-root-112",
              "rootIcon": "HvButton-rootIcon-113",
              "secondary": "HvButton-secondary-116",
              "secondaryDisabled": "HvButton-secondaryDisabled-117",
              "semantic": "HvButton-semantic-122",
              "semanticDisabled": "HvButton-semanticDisabled-123",
              "startIcon": "HvButton-startIcon-124",
            }
          }
          id="-0-action-view"
          onClick={[Function]}
        >
          <WithStyles(ForwardRef(Button))
            className="HvActions-button-108"
            classes={
              Object {
                "containedPrimary": "HvButton-primary-114",
                "disabled": "HvButton-ghostDisabled-119",
                "outlinedPrimary": "HvButton-secondary-116",
                "root": "HvButton-root-112",
                "startIcon": "HvButton-startIcon-124",
                "textPrimary": "HvButton-ghost-118",
              }
            }
            color="primary"
            disableRipple={true}
            id="-0-action-view"
            onClick={[Function]}
            variant="text"
          >
            <ForwardRef(Button)
              className="HvActions-button-108"
              classes={
                Object {
                  "colorInherit": "MuiButton-colorInherit",
                  "contained": "MuiButton-contained",
                  "containedPrimary": "MuiButton-containedPrimary HvButton-primary-114",
                  "containedSecondary": "MuiButton-containedSecondary",
                  "containedSizeLarge": "MuiButton-containedSizeLarge",
                  "containedSizeSmall": "MuiButton-containedSizeSmall",
                  "disableElevation": "MuiButton-disableElevation",
                  "disabled": "Mui-disabled HvButton-ghostDisabled-119",
                  "endIcon": "MuiButton-endIcon",
                  "focusVisible": "Mui-focusVisible",
                  "fullWidth": "MuiButton-fullWidth",
                  "iconSizeLarge": "MuiButton-iconSizeLarge",
                  "iconSizeMedium": "MuiButton-iconSizeMedium",
                  "iconSizeSmall": "MuiButton-iconSizeSmall",
                  "label": "MuiButton-label",
                  "outlined": "MuiButton-outlined",
                  "outlinedPrimary": "MuiButton-outlinedPrimary HvButton-secondary-116",
                  "outlinedSecondary": "MuiButton-outlinedSecondary",
                  "outlinedSizeLarge": "MuiButton-outlinedSizeLarge",
                  "outlinedSizeSmall": "MuiButton-outlinedSizeSmall",
                  "root": "MuiButton-root HvButton-root-112",
                  "sizeLarge": "MuiButton-sizeLarge",
                  "sizeSmall": "MuiButton-sizeSmall",
                  "startIcon": "MuiButton-startIcon HvButton-startIcon-124",
                  "text": "MuiButton-text",
                  "textPrimary": "MuiButton-textPrimary HvButton-ghost-118",
                  "textSecondary": "MuiButton-textSecondary",
                  "textSizeLarge": "MuiButton-textSizeLarge",
                  "textSizeSmall": "MuiButton-textSizeSmall",
                }
              }
              color="primary"
              disableRipple={true}
              id="-0-action-view"
              onClick={[Function]}
              variant="text"
            >
              <WithStyles(ForwardRef(ButtonBase))
                className="MuiButton-root HvButton-root-112 MuiButton-text HvActions-button-108 MuiButton-textPrimary HvButton-ghost-118"
                component="button"
                disableRipple={true}
                disabled={false}
                focusRipple={true}
                focusVisibleClassName="Mui-focusVisible"
                id="-0-action-view"
                onClick={[Function]}
                type="button"
              >
                <ForwardRef(ButtonBase)
                  className="MuiButton-root HvButton-root-112 MuiButton-text HvActions-button-108 MuiButton-textPrimary HvButton-ghost-118"
                  classes={
                    Object {
                      "disabled": "Mui-disabled",
                      "focusVisible": "Mui-focusVisible",
                      "root": "MuiButtonBase-root",
                    }
                  }
                  component="button"
                  disableRipple={true}
                  disabled={false}
                  focusRipple={true}
                  focusVisibleClassName="Mui-focusVisible"
                  id="-0-action-view"
                  onClick={[Function]}
                  type="button"
                >
                  <button
                    className="MuiButtonBase-root MuiButton-root HvButton-root-112 MuiButton-text HvActions-button-108 MuiButton-textPrimary HvButton-ghost-118"
                    disabled={false}
                    id="-0-action-view"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    <span
                      className="MuiButton-label"
                    >
                      View
                    </span>
                    <NoSsr />
                  </button>
                </ForwardRef(ButtonBase)>
              </WithStyles(ForwardRef(ButtonBase))>
            </ForwardRef(Button)>
          </WithStyles(ForwardRef(Button))>
        </HvButton>
      </WithStyles(HvButton)>
      <WithStyles(HvButton)
        category="ghost"
        className="HvActions-button-108"
        id="-1-action-delete"
        key="-1-action-delete"
        onClick={[Function]}
      >
        <HvButton
          category="ghost"
          className="HvActions-button-108"
          classes={
            Object {
              "ghost": "HvButton-ghost-118",
              "ghostDisabled": "HvButton-ghostDisabled-119",
              "ghostSecondary": "HvButton-ghostSecondary-120",
              "ghostSecondaryDisabled": "HvButton-ghostSecondaryDisabled-121",
              "primary": "HvButton-primary-114",
              "primaryDisabled": "HvButton-primaryDisabled-115",
              "root": "HvButton-root-112",
              "rootIcon": "HvButton-rootIcon-113",
              "secondary": "HvButton-secondary-116",
              "secondaryDisabled": "HvButton-secondaryDisabled-117",
              "semantic": "HvButton-semantic-122",
              "semanticDisabled": "HvButton-semanticDisabled-123",
              "startIcon": "HvButton-startIcon-124",
            }
          }
          id="-1-action-delete"
          onClick={[Function]}
        >
          <WithStyles(ForwardRef(Button))
            className="HvActions-button-108"
            classes={
              Object {
                "containedPrimary": "HvButton-primary-114",
                "disabled": "HvButton-ghostDisabled-119",
                "outlinedPrimary": "HvButton-secondary-116",
                "root": "HvButton-root-112",
                "startIcon": "HvButton-startIcon-124",
                "textPrimary": "HvButton-ghost-118",
              }
            }
            color="primary"
            disableRipple={true}
            id="-1-action-delete"
            onClick={[Function]}
            variant="text"
          >
            <ForwardRef(Button)
              className="HvActions-button-108"
              classes={
                Object {
                  "colorInherit": "MuiButton-colorInherit",
                  "contained": "MuiButton-contained",
                  "containedPrimary": "MuiButton-containedPrimary HvButton-primary-114",
                  "containedSecondary": "MuiButton-containedSecondary",
                  "containedSizeLarge": "MuiButton-containedSizeLarge",
                  "containedSizeSmall": "MuiButton-containedSizeSmall",
                  "disableElevation": "MuiButton-disableElevation",
                  "disabled": "Mui-disabled HvButton-ghostDisabled-119",
                  "endIcon": "MuiButton-endIcon",
                  "focusVisible": "Mui-focusVisible",
                  "fullWidth": "MuiButton-fullWidth",
                  "iconSizeLarge": "MuiButton-iconSizeLarge",
                  "iconSizeMedium": "MuiButton-iconSizeMedium",
                  "iconSizeSmall": "MuiButton-iconSizeSmall",
                  "label": "MuiButton-label",
                  "outlined": "MuiButton-outlined",
                  "outlinedPrimary": "MuiButton-outlinedPrimary HvButton-secondary-116",
                  "outlinedSecondary": "MuiButton-outlinedSecondary",
                  "outlinedSizeLarge": "MuiButton-outlinedSizeLarge",
                  "outlinedSizeSmall": "MuiButton-outlinedSizeSmall",
                  "root": "MuiButton-root HvButton-root-112",
                  "sizeLarge": "MuiButton-sizeLarge",
                  "sizeSmall": "MuiButton-sizeSmall",
                  "startIcon": "MuiButton-startIcon HvButton-startIcon-124",
                  "text": "MuiButton-text",
                  "textPrimary": "MuiButton-textPrimary HvButton-ghost-118",
                  "textSecondary": "MuiButton-textSecondary",
                  "textSizeLarge": "MuiButton-textSizeLarge",
                  "textSizeSmall": "MuiButton-textSizeSmall",
                }
              }
              color="primary"
              disableRipple={true}
              id="-1-action-delete"
              onClick={[Function]}
              variant="text"
            >
              <WithStyles(ForwardRef(ButtonBase))
                className="MuiButton-root HvButton-root-112 MuiButton-text HvActions-button-108 MuiButton-textPrimary HvButton-ghost-118"
                component="button"
                disableRipple={true}
                disabled={false}
                focusRipple={true}
                focusVisibleClassName="Mui-focusVisible"
                id="-1-action-delete"
                onClick={[Function]}
                type="button"
              >
                <ForwardRef(ButtonBase)
                  className="MuiButton-root HvButton-root-112 MuiButton-text HvActions-button-108 MuiButton-textPrimary HvButton-ghost-118"
                  classes={
                    Object {
                      "disabled": "Mui-disabled",
                      "focusVisible": "Mui-focusVisible",
                      "root": "MuiButtonBase-root",
                    }
                  }
                  component="button"
                  disableRipple={true}
                  disabled={false}
                  focusRipple={true}
                  focusVisibleClassName="Mui-focusVisible"
                  id="-1-action-delete"
                  onClick={[Function]}
                  type="button"
                >
                  <button
                    className="MuiButtonBase-root MuiButton-root HvButton-root-112 MuiButton-text HvActions-button-108 MuiButton-textPrimary HvButton-ghost-118"
                    disabled={false}
                    id="-1-action-delete"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    <span
                      className="MuiButton-label"
                    >
                      Delete
                    </span>
                    <NoSsr />
                  </button>
                </ForwardRef(ButtonBase)>
              </WithStyles(ForwardRef(ButtonBase))>
            </ForwardRef(Button)>
          </WithStyles(ForwardRef(Button))>
        </HvButton>
      </WithStyles(HvButton)>
      <WithStyles(DropDownMenu)
        aria-label="-more-actions"
        classes={
          Object {
            "root": "HvActions-dropDownMenu-110",
          }
        }
        dataList={
          Array [
            Object {
              "disabled": true,
              "icon": undefined,
              "iconCallback": undefined,
              "id": "update",
              "label": "Update",
            },
          ]
        }
        disablePortal={false}
        disabled={false}
        expanded={false}
        icon={
          <ForwardRef(WithStyles)
            className="HvActions-dropDownMenuIcon-111"
          />
        }
        keepOpened={false}
        onClick={[Function]}
        onToggleOpen={null}
        placement="left"
      >
        <DropDownMenu
          aria-label="-more-actions"
          classes={
            Object {
              "icon": "HvDropDownMenu-icon-158",
              "iconSelected": "HvDropDownMenu-iconSelected-159",
              "menuList": "HvDropDownMenu-menuList-160",
              "root": "HvDropDownMenu-root-157 HvActions-dropDownMenu-110",
            }
          }
          dataList={
            Array [
              Object {
                "disabled": true,
                "icon": undefined,
                "iconCallback": undefined,
                "id": "update",
                "label": "Update",
              },
            ]
          }
          disablePortal={false}
          disabled={false}
          expanded={false}
          icon={
            <ForwardRef(WithStyles)
              className="HvActions-dropDownMenuIcon-111"
            />
          }
          keepOpened={false}
          onClick={[Function]}
          onToggleOpen={null}
          placement="left"
        >
          <div
            className="HvDropDownMenu-root-157 HvActions-dropDownMenu-110"
            id="hv-dropdown-menu3"
          >
            <WithStyles(ForwardRef(IconButton))
              aria-haspopup="true"
              aria-label="-more-actions"
              buttonRef={
                Object {
                  "current": <button
                    aria-haspopup="true"
                    aria-label="-more-actions"
                    class="MuiButtonBase-root MuiIconButton-root HvDropDownMenu-icon-158"
                    id="hv-dropdown-menu3-icon-button"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <div
                        class="HvActions-dropDownMenuIcon-111 HvIconMoreOptionsVertical-root-170 HvIconMoreOptionsVertical-rootS-172"
                      >
                        <svg
                          focusable="false"
                          height="16px"
                          viewBox="0 0 16 16"
                          width="16px"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            class="color0"
                            d="M7 7h2v2H7zm0-5h2v2H7zm0 10h2v2H7z"
                            fill="#414141"
                          />
                        </svg>
                      </div>
                    </span>
                  </button>,
                }
              }
              className="HvDropDownMenu-icon-158"
              disabled={false}
              id="hv-dropdown-menu3-icon-button"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <ForwardRef(IconButton)
                aria-haspopup="true"
                aria-label="-more-actions"
                buttonRef={
                  Object {
                    "current": <button
                      aria-haspopup="true"
                      aria-label="-more-actions"
                      class="MuiButtonBase-root MuiIconButton-root HvDropDownMenu-icon-158"
                      id="hv-dropdown-menu3-icon-button"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <div
                          class="HvActions-dropDownMenuIcon-111 HvIconMoreOptionsVertical-root-170 HvIconMoreOptionsVertical-rootS-172"
                        >
                          <svg
                            focusable="false"
                            height="16px"
                            viewBox="0 0 16 16"
                            width="16px"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              class="color0"
                              d="M7 7h2v2H7zm0-5h2v2H7zm0 10h2v2H7z"
                              fill="#414141"
                            />
                          </svg>
                        </div>
                      </span>
                    </button>,
                  }
                }
                className="HvDropDownMenu-icon-158"
                classes={
                  Object {
                    "colorInherit": "MuiIconButton-colorInherit",
                    "colorPrimary": "MuiIconButton-colorPrimary",
                    "colorSecondary": "MuiIconButton-colorSecondary",
                    "disabled": "Mui-disabled",
                    "edgeEnd": "MuiIconButton-edgeEnd",
                    "edgeStart": "MuiIconButton-edgeStart",
                    "label": "MuiIconButton-label",
                    "root": "MuiIconButton-root",
                    "sizeSmall": "MuiIconButton-sizeSmall",
                  }
                }
                disabled={false}
                id="hv-dropdown-menu3-icon-button"
                onClick={[Function]}
                onKeyDown={[Function]}
              >
                <WithStyles(ForwardRef(ButtonBase))
                  aria-haspopup="true"
                  aria-label="-more-actions"
                  buttonRef={
                    Object {
                      "current": <button
                        aria-haspopup="true"
                        aria-label="-more-actions"
                        class="MuiButtonBase-root MuiIconButton-root HvDropDownMenu-icon-158"
                        id="hv-dropdown-menu3-icon-button"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <div
                            class="HvActions-dropDownMenuIcon-111 HvIconMoreOptionsVertical-root-170 HvIconMoreOptionsVertical-rootS-172"
                          >
                            <svg
                              focusable="false"
                              height="16px"
                              viewBox="0 0 16 16"
                              width="16px"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                class="color0"
                                d="M7 7h2v2H7zm0-5h2v2H7zm0 10h2v2H7z"
                                fill="#414141"
                              />
                            </svg>
                          </div>
                        </span>
                      </button>,
                    }
                  }
                  centerRipple={true}
                  className="MuiIconButton-root HvDropDownMenu-icon-158"
                  disabled={false}
                  focusRipple={true}
                  id="hv-dropdown-menu3-icon-button"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <ForwardRef(ButtonBase)
                    aria-haspopup="true"
                    aria-label="-more-actions"
                    buttonRef={
                      Object {
                        "current": <button
                          aria-haspopup="true"
                          aria-label="-more-actions"
                          class="MuiButtonBase-root MuiIconButton-root HvDropDownMenu-icon-158"
                          id="hv-dropdown-menu3-icon-button"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <div
                              class="HvActions-dropDownMenuIcon-111 HvIconMoreOptionsVertical-root-170 HvIconMoreOptionsVertical-rootS-172"
                            >
                              <svg
                                focusable="false"
                                height="16px"
                                viewBox="0 0 16 16"
                                width="16px"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  class="color0"
                                  d="M7 7h2v2H7zm0-5h2v2H7zm0 10h2v2H7z"
                                  fill="#414141"
                                />
                              </svg>
                            </div>
                          </span>
                        </button>,
                      }
                    }
                    centerRipple={true}
                    className="MuiIconButton-root HvDropDownMenu-icon-158"
                    classes={
                      Object {
                        "disabled": "Mui-disabled",
                        "focusVisible": "Mui-focusVisible",
                        "root": "MuiButtonBase-root",
                      }
                    }
                    disableRipple={true}
                    disabled={false}
                    focusRipple={true}
                    id="hv-dropdown-menu3-icon-button"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                  >
                    <button
                      aria-haspopup="true"
                      aria-label="-more-actions"
                      className="MuiButtonBase-root MuiIconButton-root HvDropDownMenu-icon-158"
                      disabled={false}
                      id="hv-dropdown-menu3-icon-button"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onDragLeave={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      tabIndex={0}
                      type="button"
                    >
                      <span
                        className="MuiIconButton-label"
                      >
                        <WithStyles(MoreOptionsVertical)
                          className="HvActions-dropDownMenuIcon-111"
                        >
                          <MoreOptionsVertical
                            className="HvActions-dropDownMenuIcon-111"
                            classes={
                              Object {
                                "root": "HvIconMoreOptionsVertical-root-170",
                                "rootL": "HvIconMoreOptionsVertical-rootL-174",
                                "rootM": "HvIconMoreOptionsVertical-rootM-173",
                                "rootS": "HvIconMoreOptionsVertical-rootS-172",
                                "rootXs": "HvIconMoreOptionsVertical-rootXs-171",
                              }
                            }
                          >
                            <div
                              className="HvActions-dropDownMenuIcon-111 HvIconMoreOptionsVertical-root-170 HvIconMoreOptionsVertical-rootS-172"
                            >
                              <svg
                                focusable={false}
                                height="16px"
                                viewBox="0 0 16 16"
                                width="16px"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  className="color0"
                                  d="M7 7h2v2H7zm0-5h2v2H7zm0 10h2v2H7z"
                                  fill="#414141"
                                />
                              </svg>
                            </div>
                          </MoreOptionsVertical>
                        </WithStyles(MoreOptionsVertical)>
                      </span>
                      <NoSsr />
                    </button>
                  </ForwardRef(ButtonBase)>
                </WithStyles(ForwardRef(ButtonBase))>
              </ForwardRef(IconButton)>
            </WithStyles(ForwardRef(IconButton))>
            <ForwardRef(Popper)
              anchorEl={null}
              disablePortal={false}
              open={false}
              placement="bottom-end"
              popperOptions={Object {}}
              style={
                Object {
                  "zIndex": 1500,
                }
              }
            />
          </div>
        </DropDownMenu>
      </WithStyles(DropDownMenu)>
    </div>
  </Actions>
</WithStyles(Actions)>
`;
